--- a/lab_environment/Vagrantfile
+++ b/lab_environment/Vagrantfile
@@ -61,6 +61,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "webserver" do |webserver|
     webserver.vm.hostname = "webserver"
+    webserver.vm.network "private_network", type: "dhcp"
     webserver.vm.provision "shell", inline: $script
     webserver.vm.post_up_message = "To access this VM, do 'ssh -l deploy -i deploy_key [hostname/IP]"
     webserver.vm.synced_folder ".", "/vagrant",
@@ -71,6 +72,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "dbserver" do |dbserver|
     dbserver.vm.hostname = "dbserver"
+    webserver.vm.network "private_network", type: "dhcp"
     dbserver.vm.provision "shell", inline: $script
     dbserver.vm.post_up_message = "To access this VM, do 'ssh -l deploy -i deploy_key [hostname/IP]"
     dbserver.vm.synced_folder ".", "/vagrant",
